Шапка 1ая итерация

--- a/index.html
+++ b/index.html
@@ -4,8 +4,36 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Научиться учиться</title>
+    <link rel="stylesheet" href="styles/normalize.css" />
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    <div class="page"></div>
+    <div class="page">
+      <div class="logo logo__place_header">
+        <a href="https://practicum.yandex.ru/profile/ux-research/"
+          ><img
+            src="images/logo/logo_place_header.svg"
+            alt="Лого Яндекс Практикум"
+        /></a>
+      </div>
+      <header class="header">
+        <div class="header__title">
+          <p class="header__title_text text">Научиться учиться</p>
+        </div>
+        <div class="header__subtitle">
+          <p class="header__subtitle_text text">
+            Какие современные и эффективные подходы к обучению вы можете
+            использовать в своей жизни?
+            <a class="header__link" href="#!">Узнать &rarr;</a>
+          </p>
+        </div>
+        <img
+          class="header__main-illustration"
+          src="images/header-image.png"
+          alt="header-image"
+        />
+        <div class="header__square-pic"></div>
+      </header>
+    </div>
   </body>
 </html>
