Начата секция Description

--- a/index.html
+++ b/index.html
@@ -34,6 +34,18 @@
         />
         <div class="header__square-pic"></div>
       </header>
+      <section class="description">
+        <div class="two-columns">
+          <h3 class="two-columns__brief">Главные проблемы в обучении</h3>
+          <div class="two-columns__main-text">
+            <div class="two-columns__paragraph">
+              <p>Строка 1</p>
+              <p>Строка 2</p>
+              <p>Строка 3</p>
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
   </body>
 </html>
