Закончена секция digits

--- a/index.html
+++ b/index.html
@@ -58,6 +58,69 @@
           </div>
         </div>
       </section>
+      <section class="digits">
+        <h4 class="section__title text">Цифры и факты</h4>
+        <p class="section__subtitle text">Про учёбу и мозг</p>
+        <div class="table">
+          <div class="table__card">
+            <h5 class="card__title text">68 миллиардов</h5>
+
+            <p class="card__subtitle text">Число нейронов в мозге человека</p>
+          </div>
+
+          <div class="table__card">
+            <h5 class="card__title text">2,1 миллиарда</h5>
+
+            <p class="card__subtitle text">
+              Число нуждающихся в повышении квалификации
+            </p>
+            <p class="card__subtitle text">Всемирный Банк, 2017</p>
+          </div>
+
+          <div class="table__card">
+            <h5 class="card__title text">1000 терабайт</h5>
+
+            <p class="card__subtitle text">Объём памяти человека</p>
+          </div>
+
+          <div class="table__card">
+            <h5 class="card__title text">500 триллионов</h5>
+
+            <p class="card__subtitle text">
+              Число ответственных за обучение нервных синапсов у взрослого
+              человека
+            </p>
+          </div>
+
+          <div class="table__card">
+            <h5 class="card__title text">420 миллионов</h5>
+
+            <p class="card__subtitle text">
+              Число взрослых людей моложе 25 лет, не имеющих образования для
+              трудоустройства
+            </p>
+            <p class="card__subtitle text">Всемирный Банк, 2017</p>
+          </div>
+
+          <div class="table__card">
+            <h5 class="card__title text">17–20 лет</h5>
+
+            <p class="card__subtitle text">Пик обучаемости</p>
+          </div>
+
+          <div class="table__card">
+            <h5 class="card__title text">1885 год</h5>
+
+            <p class="card__subtitle text">Открытие кривой забывания</p>
+          </div>
+
+          <div class="table__card">
+            <h5 class="card__title text">1889 год</h5>
+
+            <p class="card__subtitle text">Открытие условного рефлекса</p>
+          </div>
+        </div>
+      </section>
     </div>
   </body>
 </html>
