Начало работы над footer

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles/normalize.css" />
     <link rel="stylesheet" href="styles/style.css" />
   </head>
+
   <body>
     <div class="page">
       <div class="logo logo__place_header">
@@ -16,6 +17,7 @@
             alt="Лого Яндекс Практикум"
         /></a>
       </div>
+
       <header class="header">
         <div class="header__title">
           <p class="header__title_text text">Научиться учиться</p>
@@ -34,6 +36,7 @@
         />
         <div class="header__square-pic"></div>
       </header>
+
       <section class="description">
         <div class="two-columns">
           <h4 class="two-columns__brief">Главные проблемы в обучении</h4>
@@ -58,69 +61,137 @@
           </div>
         </div>
       </section>
+
       <section class="digits">
         <h4 class="section__title text">Цифры и факты</h4>
         <p class="section__subtitle text">Про учёбу и мозг</p>
         <div class="table">
-          <div class="table__card">
+          <div class="table__card table__card_theme_white">
             <h5 class="card__title text">68 миллиардов</h5>
-
             <p class="card__subtitle text">Число нейронов в мозге человека</p>
           </div>
-
-          <div class="table__card">
+          <div class="table__card table__card_theme_white">
             <h5 class="card__title text">2,1 миллиарда</h5>
-
             <p class="card__subtitle text">
               Число нуждающихся в повышении квалификации
             </p>
             <p class="card__subtitle text">Всемирный Банк, 2017</p>
           </div>
-
-          <div class="table__card">
+          <div class="table__card table__card_theme_white">
             <h5 class="card__title text">1000 терабайт</h5>
-
             <p class="card__subtitle text">Объём памяти человека</p>
           </div>
 
-          <div class="table__card">
+          <div class="table__card table__card_theme_white">
             <h5 class="card__title text">500 триллионов</h5>
-
             <p class="card__subtitle text">
               Число ответственных за обучение нервных синапсов у взрослого
               человека
             </p>
           </div>
-
-          <div class="table__card">
+          <div class="table__card table__card_theme_white">
             <h5 class="card__title text">420 миллионов</h5>
-
             <p class="card__subtitle text">
               Число взрослых людей моложе 25 лет, не имеющих образования для
               трудоустройства
             </p>
             <p class="card__subtitle text">Всемирный Банк, 2017</p>
           </div>
-
-          <div class="table__card">
+          <div class="table__card table__card_theme_white">
             <h5 class="card__title text">17–20 лет</h5>
-
             <p class="card__subtitle text">Пик обучаемости</p>
           </div>
-
-          <div class="table__card">
+          <div class="table__card table__card_theme_white">
             <h5 class="card__title text">1885 год</h5>
-
             <p class="card__subtitle text">Открытие кривой забывания</p>
           </div>
-
-          <div class="table__card">
+          <div class="table__card table__card_theme_white">
             <h5 class="card__title text">1889 год</h5>
-
             <p class="card__subtitle text">Открытие условного рефлекса</p>
           </div>
         </div>
       </section>
+
+      <section class="feynman">
+        <h4 class="feynman__title text">Метод Фейнмана</h4>
+        <p class="fenman__subtitle text">Выучить и не забыть</p>
+        <a class="feynman__link text" href="#!">Подробнее &rarr;</a>
+        <img class="feynman__img" src="images/feynman.png" alt="feynman img" />
+      </section>
+
+      <section class="kaufman">
+        <h4 class="text section__title section__title_theme_dark">
+          Принципы обучения
+        </h4>
+        <p class="text section__subtitle section__subtitle_theme_dark">
+          от Джоша Кауфмана
+        </p>
+        <div class="table table_theme_dark">
+          <div class="table__card table__card_theme_black">
+            <h5 class="card__title text">1</h5>
+            <p class="card__subtitle text">Выберите привлекательный проект.</p>
+          </div>
+          <div class="table__card table__card_theme_black">
+            <h5 class="card__title text">2</h5>
+            <p class="card__subtitle text">
+              Сосредоточьтесь на каком-то одном навыке.
+            </p>
+          </div>
+          <div class="table__card table__card_theme_black">
+            <h5 class="card__title text">3</h5>
+            <p class="card__subtitle text">
+              Определите целевой уровень мастерства.
+            </p>
+          </div>
+          <div class="table__card table__card_theme_black">
+            <h5 class="card__title text">4</h5>
+            <p class="card__subtitle text">Разбейте навык на элементы.</p>
+          </div>
+          <div class="table__card table__card_theme_black">
+            <h5 class="card__title text">5</h5>
+            <p class="card__subtitle text">
+              Приготовьте всё необходимое для занятий.
+            </p>
+          </div>
+          <div class="table__card table__card_theme_black">
+            <h5 class="card__title text">6</h5>
+            <p class="card__subtitle text">
+              Устраните препятствия для занятий.
+            </p>
+          </div>
+          <div class="table__card table__card_theme_black">
+            <h5 class="card__title text">7</h5>
+            <p class="card__subtitle text">
+              Выделите специальное время для занятий.
+            </p>
+          </div>
+          <div class="table__card table__card_theme_black">
+            <h5 class="card__title text">8</h5>
+            <p class="card__subtitle text">
+              Создайте быстрые петли обратной связи.
+            </p>
+          </div>
+          <div class="table__card table__card_theme_black">
+            <h5 class="card__title text">9</h5>
+            <p class="card__subtitle text">
+              Занимайтесь по расписанию, короткими интенсивными интервалами.
+            </p>
+          </div>
+          <div class="table__card table__card_theme_black">
+            <h5 class="card__title text">10</h5>
+            <p class="card__subtitle text">
+              Уделяйте внимание количеству и скорости.
+            </p>
+          </div>
+          <img
+            class="kaufman img"
+            src="images/kaufman-triangle.svg"
+            alt="kaufman trinagle"
+          />
+        </div>
+      </section>
+
+      <footer class="footer"></footer>
     </div>
   </body>
 </html>
