--- a/index.html
+++ b/index.html
@@ -20,13 +20,15 @@
 
       <header class="header">
         <div class="header__title">
-          <p class="header__title_text text">Научиться учиться</p>
+          <p class="header__title_text text">"Научиться учиться</p>
         </div>
         <div class="header__subtitle">
           <p class="header__subtitle_text text">
             Какие современные и эффективные подходы к обучению вы можете
             использовать в своей жизни?
-            <a class="header__link" href="#!">Узнать &rarr;</a>
+            <a class="header__link" href="#trubles-in-learning"
+              >Узнать &rarr;</a
+            >
           </p>
         </div>
         <img
@@ -38,6 +40,7 @@
       </header>
 
       <section class="description">
+        <a id="trubles-in-learning"></a>
         <div class="two-columns">
           <h4 class="two-columns__brief">Главные проблемы в обучении</h4>
           <div class="two-columns__main-text">
@@ -115,11 +118,14 @@
       <section class="feynman">
         <h4 class="feynman__title text">Метод Фейнмана</h4>
         <p class="fenman__subtitle text">Выучить и не забыть</p>
-        <a class="feynman__link text" href="#!">Подробнее &rarr;</a>
+        <a class="feynman__link text" href="#principles-of-learning"
+          >Подробнее &rarr;</a
+        >
         <img class="feynman__img" src="images/feynman.png" alt="feynman img" />
       </section>
 
       <section class="kaufman">
+        <a href id="principles-of-learning"></a>
         <h4 class="text section__title section__title_theme_dark">
           Принципы обучения
         </h4>
@@ -191,7 +197,57 @@
         </div>
       </section>
 
-      <footer class="footer"></footer>
+      <footer class="footer">
+        <div class="footer__columns">
+          <div class="footer__column_content_copyright">
+            <div class="logo logo_place_footer">
+              <a href="https://practicum.yandex.ru/profile/ux-research/"
+                ><img
+                  src="images/logo/logo_place_footer.svg"
+                  alt="Лого Яндекс Практикум"
+              /></a>
+            </div>
+            <p class="text footer__author">&copy; Виктор Акула</p>
+          </div>
+          <div class="footer__column_content footer__column_content_info">
+            <p class="text footer__column-heading">О Практикуме</p>
+            <ul style="list-style: none" class="text footer__column-links">
+              <li>Главная</li>
+              <li>Концепция</li>
+              <li>Наставники</li>
+            </ul>
+          </div>
+          <div class="footer__column_content footer__column_content_social">
+            <p class="text footer__column-heading">Соцсети</p>
+            <ul style="list-style: none" class="text footer__column-links">
+              <a class="footer__link" href="#!"
+                ><li>
+                  <img
+                    src="images/facebook_color_white.svg"
+                    class="social-networks-png"
+                  />Facebook
+                </li>
+              </a>
+              <a class="footer__link" href="#!"
+                ><li>
+                  <img
+                    src="images/vk_color_white.svg"
+                    class="social-networks-png"
+                  />ВКонтакте
+                </li>
+              </a>
+              <a class="footer__link" href="#!"
+                ><li>
+                  <img
+                    src="images/instagram_color_white.svg"
+                    class="social-networks-png"
+                  />Instagram
+                </li>
+              </a>
+            </ul>
+          </div>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
