Исправлены заменчания. 2 итерация

--- a/index.html
+++ b/index.html
@@ -10,240 +10,218 @@
 
   <body>
     <div class="page">
-      <div class="logo logo__place_header">
-        <a href="https://practicum.yandex.ru/profile/ux-research/"
-          ><img
-            src="images/logo/logo_place_header.svg"
-            alt="Лого Яндекс Практикум"
-        /></a>
-      </div>
-
       <header class="header">
-        <div class="header__title">
-          <p class="header__title_text text">"Научиться учиться</p>
-        </div>
-        <div class="header__subtitle">
-          <p class="header__subtitle_text text">
-            Какие современные и эффективные подходы к обучению вы можете
-            использовать в своей жизни?
-            <a class="header__link" href="#trubles-in-learning"
-              >Узнать &rarr;</a
-            >
-          </p>
-        </div>
+        <img
+          class="logo logo_place_header"
+          src="images/logo/logo_place_header.svg"
+          alt="Лого Яндекс Практикум"
+        />
+        <h1 class="header__title">Научиться учиться</h1>
+        <!--    <div class="header__subtitle"> -->
+        <p class="header__subtitle">
+          Какие современные и эффективные подходы к обучению вы можете
+          использовать в своей жизни?
+          <a class="header__link" href="#trubles-in-learning">Узнать &rarr;</a>
+        </p>
+        <!-- </div> -->
         <img
           class="header__main-illustration"
           src="images/header-image.png"
-          alt="header-image"
+          alt="изображение шапки"
         />
         <div class="header__square-pic"></div>
       </header>
 
-      <section class="description">
-        <a id="trubles-in-learning"></a>
-        <div class="two-columns">
-          <h4 class="two-columns__brief">Главные проблемы в обучении</h4>
-          <div class="two-columns__main-text">
-            <p class="two-columns__paragraph text">
-              Ни в школе, ни в институте нас не учат тому, как правильно изучать
-              материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся
-              решать однообразные задачи, чтобы лучше сдать тест, но часто в
-              итоге это не дает нам реального знания. Зубрежка быстро
-              выветривается и не приносит пользы.
-            </p>
-            <p class="two-columns__paragraph text">
-              <span class="two-columns__span-accent text">Вывод:</span>учиться
-              тоже нужно уметь, но почему-то этому мало где учат. Что с этим
-              делать?
-            </p>
-            <p class="two-columns__paragraph text">
-              Конкретные техники и упражнения помогают изменить подход к
-              обучению, сделать его эффективным и захватывающим. Эти же техники
-              применяются на примере обучения в Практикуме.
-            </p>
+      <main>
+        <section class="description" id="trubles-in-learning">
+          <div class="two-columns">
+            <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
+            <div class="two-columns__main-text">
+              <p class="two-columns__paragraph">
+                Ни в школе, ни в институте нас не учат тому, как правильно
+                изучать материал. Мы готовимся к экзаменам и учим билеты. Мы
+                тренируемся решать однообразные задачи, чтобы лучше сдать тест,
+                но часто в итоге это не дает нам реального знания. Зубрежка
+                быстро выветривается и не приносит пользы.
+              </p>
+              <p class="two-columns__paragraph">
+                <span class="two-columns__span-accent">Вывод:</span> учиться
+                тоже нужно уметь, но почему-то этому мало где учат. Что с этим
+                делать?
+              </p>
+              <p class="two-columns__paragraph">
+                Конкретные техники и упражнения помогают изменить подход к
+                обучению, сделать его эффективным и захватывающим. Эти же
+                техники применяются на примере обучения в Практикуме.
+              </p>
+            </div>
           </div>
-        </div>
-      </section>
+        </section>
 
-      <section class="digits">
-        <h4 class="section__title text">Цифры и факты</h4>
-        <p class="section__subtitle text">Про учёбу и мозг</p>
-        <div class="table">
-          <div class="table__card table__card_theme_white">
-            <h5 class="card__title text">68 миллиардов</h5>
-            <p class="card__subtitle text">Число нейронов в мозге человека</p>
-          </div>
-          <div class="table__card table__card_theme_white">
-            <h5 class="card__title text">2,1 миллиарда</h5>
-            <p class="card__subtitle text">
-              Число нуждающихся в повышении квалификации
-            </p>
-            <p class="card__subtitle text">Всемирный Банк, 2017</p>
-          </div>
-          <div class="table__card table__card_theme_white">
-            <h5 class="card__title text">1000 терабайт</h5>
-            <p class="card__subtitle text">Объём памяти человека</p>
-          </div>
+        <section class="digits">
+          <h2 class="section-title">Цифры и факты</h2>
+          <p class="section-subtitle">Про учёбу и мозг</p>
+          <div class="table">
+            <div class="table__cell">
+              <h3 class="table__heading">68 миллиардов</h3>
+              <p class="table__text">Число нейронов в мозге человека</p>
+            </div>
+            <div class="table__cell">
+              <h3 class="table__heading">2,1 миллиарда</h3>
+              <p class="table__text">
+                Число нуждающихся в повышении квалификации
+              </p>
+              <p class="table__text">Всемирный Банк, 2017</p>
+            </div>
+            <div class="table__cell">
+              <h3 class="table__heading">1000 терабайт</h3>
+              <p class="table__text">Объём памяти человека</p>
+            </div>
 
-          <div class="table__card table__card_theme_white">
-            <h5 class="card__title text">500 триллионов</h5>
-            <p class="card__subtitle text">
-              Число ответственных за обучение нервных синапсов у взрослого
-              человека
-            </p>
+            <div class="table__cell">
+              <h3 class="table__heading">500 триллионов</h3>
+              <p class="table__text">
+                Число ответственных за обучение нервных синапсов у взрослого
+                человека
+              </p>
+            </div>
+            <div class="table__cell">
+              <h3 class="table__heading">420 миллионов</h3>
+              <p class="table__text">
+                Число взрослых людей моложе 25 лет, не имеющих образования для
+                трудоустройства
+              </p>
+              <p class="table__text">Всемирный Банк, 2017</p>
+            </div>
+            <div class="table__cell">
+              <h3 class="table__heading">17–20 лет</h3>
+              <p class="table__text">Пик обучаемости</p>
+            </div>
+            <div class="table__cell">
+              <h3 class="table__heading">1885 год</h3>
+              <p class="table__text">Открытие кривой забывания</p>
+            </div>
+            <div class="table__cell">
+              <h3 class="table__heading">1889 год</h3>
+              <p class="table__text">Открытие условного рефлекса</p>
+            </div>
           </div>
-          <div class="table__card table__card_theme_white">
-            <h5 class="card__title text">420 миллионов</h5>
-            <p class="card__subtitle text">
-              Число взрослых людей моложе 25 лет, не имеющих образования для
-              трудоустройства
-            </p>
-            <p class="card__subtitle text">Всемирный Банк, 2017</p>
-          </div>
-          <div class="table__card table__card_theme_white">
-            <h5 class="card__title text">17–20 лет</h5>
-            <p class="card__subtitle text">Пик обучаемости</p>
-          </div>
-          <div class="table__card table__card_theme_white">
-            <h5 class="card__title text">1885 год</h5>
-            <p class="card__subtitle text">Открытие кривой забывания</p>
-          </div>
-          <div class="table__card table__card_theme_white">
-            <h5 class="card__title text">1889 год</h5>
-            <p class="card__subtitle text">Открытие условного рефлекса</p>
-          </div>
-        </div>
-      </section>
+        </section>
 
-      <section class="feynman">
-        <h4 class="feynman__title text">Метод Фейнмана</h4>
-        <p class="fenman__subtitle text">Выучить и не забыть</p>
-        <a class="feynman__link text" href="#principles-of-learning"
-          >Подробнее &rarr;</a
-        >
-        <img class="feynman__img" src="images/feynman.png" alt="feynman img" />
-      </section>
+        <section class="feynman">
+          <h2 class="feynman__title">Метод Фейнмана</h2>
+          <p class="feynman__subtitle">Выучить и не забыть</p>
+          <a class="feynman__link" href="#!">Подробнее &rarr;</a>
+          <img class="feynman__img" src="images/feynman.png" alt="Фейман" />
+        </section>
 
-      <section class="kaufman">
-        <a href id="principles-of-learning"></a>
-        <h4 class="text section__title section__title_theme_dark">
-          Принципы обучения
-        </h4>
-        <p class="text section__subtitle section__subtitle_theme_dark">
-          от Джоша Кауфмана
-        </p>
-        <div class="table table_theme_dark">
-          <div class="table__card table__card_theme_black">
-            <h5 class="card__title text">1</h5>
-            <p class="card__subtitle text">Выберите привлекательный проект.</p>
+        <section class="kaufman">
+          <h2 class="section-title section-title_theme_dark">
+            Принципы обучения
+          </h2>
+          <p class="section-subtitle section-subtitle_theme_dark">
+            от Джоша Кауфмана
+          </p>
+          <div class="table table_theme_dark">
+            <div class="table__cell table__cell_theme_black">
+              <h3 class="table__heading">1</h3>
+              <p class="table__text">Выберите привлекательный проект.</p>
+            </div>
+            <div class="table__cell table__cell_theme_black">
+              <h3 class="table__heading">2</h3>
+              <p class="table__text">
+                Сосредоточьтесь на каком-то одном навыке.
+              </p>
+            </div>
+            <div class="table__cell table__cell_theme_black">
+              <h3 class="table__heading">3</h3>
+              <p class="table__text">Определите целевой уровень мастерства.</p>
+            </div>
+            <div class="table__cell table__cell_theme_black">
+              <h3 class="table__heading">4</h3>
+              <p class="table__text">Разбейте навык на элементы.</p>
+            </div>
+            <div class="table__cell table__cell_theme_black">
+              <h3 class="table__heading">5</h3>
+              <p class="table__text">
+                Приготовьте всё необходимое для занятий.
+              </p>
+            </div>
+            <div class="table__cell table__cell_theme_black">
+              <h3 class="table__heading">6</h3>
+              <p class="table__text">Устраните препятствия для занятий.</p>
+            </div>
+            <div class="table__cell table__cell_theme_black">
+              <h3 class="table__heading">7</h3>
+              <p class="table__text">Выделите специальное время для занятий.</p>
+            </div>
+            <div class="table__cell table__cell_theme_black">
+              <h3 class="table__heading">8</h3>
+              <p class="table__text">Создайте быстрые петли обратной связи.</p>
+            </div>
+            <div class="table__cell table__cell_theme_black">
+              <h3 class="table__heading">9</h3>
+              <p class="table__text">
+                Занимайтесь по расписанию, короткими интенсивными интервалами.
+              </p>
+            </div>
+            <div class="table__cell table__cell_theme_black">
+              <h3 class="table__heading">10</h3>
+              <p class="table__text">
+                Уделяйте внимание количеству и скорости.
+              </p>
+            </div>
+            <div class="kaufman__triangle"></div>
           </div>
-          <div class="table__card table__card_theme_black">
-            <h5 class="card__title text">2</h5>
-            <p class="card__subtitle text">
-              Сосредоточьтесь на каком-то одном навыке.
-            </p>
-          </div>
-          <div class="table__card table__card_theme_black">
-            <h5 class="card__title text">3</h5>
-            <p class="card__subtitle text">
-              Определите целевой уровень мастерства.
-            </p>
-          </div>
-          <div class="table__card table__card_theme_black">
-            <h5 class="card__title text">4</h5>
-            <p class="card__subtitle text">Разбейте навык на элементы.</p>
-          </div>
-          <div class="table__card table__card_theme_black">
-            <h5 class="card__title text">5</h5>
-            <p class="card__subtitle text">
-              Приготовьте всё необходимое для занятий.
-            </p>
-          </div>
-          <div class="table__card table__card_theme_black">
-            <h5 class="card__title text">6</h5>
-            <p class="card__subtitle text">
-              Устраните препятствия для занятий.
-            </p>
-          </div>
-          <div class="table__card table__card_theme_black">
-            <h5 class="card__title text">7</h5>
-            <p class="card__subtitle text">
-              Выделите специальное время для занятий.
-            </p>
-          </div>
-          <div class="table__card table__card_theme_black">
-            <h5 class="card__title text">8</h5>
-            <p class="card__subtitle text">
-              Создайте быстрые петли обратной связи.
-            </p>
-          </div>
-          <div class="table__card table__card_theme_black">
-            <h5 class="card__title text">9</h5>
-            <p class="card__subtitle text">
-              Занимайтесь по расписанию, короткими интенсивными интервалами.
-            </p>
-          </div>
-          <div class="table__card table__card_theme_black">
-            <h5 class="card__title text">10</h5>
-            <p class="card__subtitle text">
-              Уделяйте внимание количеству и скорости.
-            </p>
-          </div>
-          <img
-            class="kaufman img"
-            src="images/kaufman-triangle.svg"
-            alt="kaufman trinagle"
-          />
-        </div>
-      </section>
+        </section>
+      </main>
 
       <footer class="footer">
         <div class="footer__columns">
-          <div class="footer__column_content_copyright">
-            <div class="logo logo_place_footer">
-              <a href="https://practicum.yandex.ru/profile/ux-research/"
-                ><img
-                  src="images/logo/logo_place_footer.svg"
-                  alt="Лого Яндекс Практикум"
-              /></a>
-            </div>
-            <p class="text footer__author">&copy; Виктор Акула</p>
+          <div class="footer__column footer__column_content_copyright">
+            <a href="https://practicum.yandex.ru/profile/ux-research/"
+              ><img
+                class="logo logo_place_footer"
+                src="images/logo/logo_place_footer.svg"
+                alt="Лого Яндекс Практикум"
+            /></a>
+            <p class="footer__author">&copy; Виктор Акула</p>
           </div>
-          <div class="footer__column_content footer__column_content_info">
-            <p class="text footer__column-heading">О Практикуме</p>
-            <ul style="list-style: none" class="text footer__column-links">
-              <li>Главная</li>
-              <li>Концепция</li>
-              <li>Наставники</li>
+          <nav class="footer__column footer__column_content_info">
+            <h3 class="footer__column-heading">О Практикуме</h3>
+            <ul class="footer__column-links">
+              <li><a class="footer__column-link" href="#!">Главная</a></li>
+              <li><a class="footer__column-link" href="#!">Концепция</a></li>
+              <li><a class="footer__column-link" href="#!">Наставники</a></li>
             </ul>
-          </div>
-          <div class="footer__column_content footer__column_content_social">
-            <p class="text footer__column-heading">Соцсети</p>
-            <ul style="list-style: none" class="text footer__column-links">
-              <a class="footer__link" href="#!"
-                ><li>
+          </nav>
+          <div class="footer__column footer__column_content_social">
+            <h3 class="footer__column-heading">Соцсети</h3>
+            <ul class="footer__column-links">
+              <li>
+                <a class="footer__column-link" href="#!">
                   <img
                     src="images/facebook_color_white.svg"
-                    class="social-networks-png"
+                    class="footer__social-icon"
                   />Facebook
-                </li>
-              </a>
-              <a class="footer__link" href="#!"
-                ><li>
+                </a>
+              </li>
+              <li>
+                <a class="footer__column-link" href="#!">
                   <img
                     src="images/vk_color_white.svg"
-                    class="social-networks-png"
+                    class="footer__social-icon"
                   />ВКонтакте
-                </li>
-              </a>
-              <a class="footer__link" href="#!"
-                ><li>
+                </a>
+              </li>
+              <li>
+                <a class="footer__column-link" href="#!">
                   <img
                     src="images/instagram_color_white.svg"
-                    class="social-networks-png"
+                    class="footer__social-icon"
                   />Instagram
-                </li>
-              </a>
+                </a>
+              </li>
             </ul>
           </div>
         </div>
