--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@
                   <img
                     src="images/facebook_color_white.svg"
                     class="footer__social-icon"
+                    alt="Лого Фейсбук"
                   />Facebook
                 </a>
               </li>
@@ -211,6 +212,7 @@
                   <img
                     src="images/vk_color_white.svg"
                     class="footer__social-icon"
+                    alt="Лого ВК"
                   />ВКонтакте
                 </a>
               </li>
@@ -219,6 +221,7 @@
                   <img
                     src="images/instagram_color_white.svg"
                     class="footer__social-icon"
+                    alt="лого Инстаграмм"
                   />Instagram
                 </a>
               </li>
