--- a/index.html
+++ b/index.html
@@ -6,6 +6,105 @@
     <title>Научиться учиться</title>
     <link rel="stylesheet" href="styles/normalize.css" />
     <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="blocks\page\page.css" />
+    <link rel="stylesheet" href="blocks\header\header.css" />
+    <link rel="stylesheet" href="blocks\logo\logo.css" />
+    <link rel="stylesheet" href="blocks\logo\_place\logo_place_header.css" />
+    <link rel="stylesheet" href="blocks\header\__title\header__title.css" />
+    <link
+      rel="stylesheet"
+      href="blocks\header\__subtittle\header__subtitle.css"
+    />
+    <link rel="stylesheet" href="blocks\header\__link\header__link.css" />
+    <link
+      rel="stylesheet"
+      href="blocks\header\__main-illustration\header__main-illustration.css"
+    />
+    <link
+      rel="stylesheet"
+      href="blocks\header\__square-pic\header__square-pic.css"
+    />
+    <link rel="stylesheet" href="blocks\description\description.css" />
+    <link
+      rel="stylesheet"
+      href="blocks\description\two-columns\two-columns.css"
+    />
+    <link
+      rel="stylesheet"
+      href="blocks\description\two-columns\__main-text\two-columns__main-text.css"
+    />
+    <link
+      rel="stylesheet"
+      href="blocks\description\two-columns\__brief\two-columns__brief.css"
+    />
+    <link
+      rel="stylesheet"
+      href="blocks\description\two-columns\__paragraph\two-columns__paragraph.css"
+    />
+    <link
+      rel="stylesheet"
+      href="blocks\description\two-columns\__span-accent\two-columns__span-accent.css"
+    />
+    <link rel="stylesheet" href="blocks\digits\digits.css" />
+    <link rel="stylesheet" href="blocks\section-title\section-title.css" />
+    <link
+      rel="stylesheet"
+      href="blocks\section-subtitle\section-subtitle.css"
+    />
+    <link rel="stylesheet" href="blocks\table\table.css" />
+    <link rel="stylesheet" href="blocks\table\__cell\table__cell.css" />
+    <link rel="stylesheet" href="blocks\table\__heading\table__heading.css" />
+    <link rel="stylesheet" href="blocks\table\__text\table__text.css" />
+    <link rel="stylesheet" href="blocks\feynman\feynman.css" />
+    <link rel="stylesheet" href="blocks\feynman\__title\feynman__title.css" />
+    <link
+      rel="stylesheet"
+      href="blocks\feynman\__subtitle\feynman__subtitle.css"
+    />
+    <link rel="stylesheet" href="blocks\feynman\__link\feynman__link.css" />
+    <link rel="stylesheet" href="blocks\feynman\__img\feynman__img.css" />
+    <link rel="stylesheet" href="blocks\kaufman\kaufman.css" />
+    <link
+      rel="stylesheet"
+      href="blocks\section-title\_theme\section-title_theme_dark.css"
+    />
+    <link
+      rel="stylesheet"
+      href="blocks\section-subtitle\_theme\section-subtitle_theme_dark.css"
+    />
+    <link rel="stylesheet" href="blocks\table\_theme\table_theme_dark.css" />
+    <link
+      rel="stylesheet"
+      href="blocks\table\__cell\_theme\table__cell_theme_dark.css"
+    />
+    <link
+      rel="stylesheet"
+      href="blocks\kaufman\__triangle\kaufman__triangle.css"
+    />
+    <link rel="stylesheet" href="blocks\footer\footer.css" />
+    <link rel="stylesheet" href="blocks\footer\__columns\footer__columns.css" />
+    <link rel="stylesheet" href="blocks\footer\__column\footer__column.css" />
+    <link
+      rel="stylesheet"
+      href="blocks\footer\__column\_content\footer__column_content_copyright.css"
+    />
+    <link rel="stylesheet" href="blocks\footer\__author\footer__author.css" />
+    <link
+      rel="stylesheet"
+      href="blocks\footer\__column-heading\footer__column-heading.css"
+    />
+    <link
+      rel="stylesheet"
+      href="blocks\footer\__column-links\footer__column-links.css"
+    />
+    <link
+      rel="stylesheet"
+      href="blocks\footer\__social-icon\footer__social-icon.css"
+    />
+    <link
+      rel="stylesheet"
+      href="blocks\footer\__column-link\footer__column-link.css"
+    />
   </head>
 
   <body>
@@ -13,20 +112,18 @@
       <header class="header">
         <img
           class="logo logo_place_header"
-          src="images/logo/logo_place_header.svg"
+          src="blocks\images\logo\logo_place_header.svg"
           alt="Лого Яндекс Практикум"
         />
         <h1 class="header__title">Научиться учиться</h1>
-        <!--    <div class="header__subtitle"> -->
         <p class="header__subtitle">
           Какие современные и эффективные подходы к обучению вы можете
           использовать в своей жизни?
           <a class="header__link" href="#trubles-in-learning">Узнать &rarr;</a>
         </p>
-        <!-- </div> -->
         <img
           class="header__main-illustration"
-          src="images/header-image.png"
+          src="blocks\images\header-image\header-image.png"
           alt="изображение шапки"
         />
         <div class="header__square-pic"></div>
